# swes1d

./: CMakeLists.txt  README.md
benchmarks/bump_fluvial/: CMakeLists.txt  Makefile  main.cpp
benchmarks/bump_rest_emerged/: CMakeLists.txt  Makefile  main.cpp
benchmarks/bump_rest_immerged/: CMakeLists.txt  Makefile  main.cpp
src/: Flux.hpp  IOManager.hpp  Initialization.hpp  Parameters.hpp  SWES1D.cpp  SWES1D.hpp  Solver.hpp  TimeScheme.hpp  Topography.hpp  Types.hpp  dummy.cpp
src/libboundaryconditions/: BoundaryConditions.cpp  BoundaryConditions.hpp  CMakeLists.txt
src/libflux/: CMakeLists.txt  Flux.hpp  HLLEFlux.cpp  HLLFlux.cpp  KineticFlux.cpp  PhyFlux.cpp  RusanovFlux.cpp
src/libmodel/: CMakeLists.txt  FrictionModel.cpp  FrictionModel.hpp  InfiltrationModel.cpp  InfiltrationModel.hpp  Model.hpp  RainModel.cpp  RainModel.hpp  TopographyModel.hpp
src/libparameters/: CMakeLists.txt  Parameters.cpp  Parameters.hpp  Types.hpp
src/libsolver/: CMakeLists.txt  Solver.cpp  Solver.hpp
src/libtimescheme/: CMakeLists.txt  Euler.cpp  Heun.cpp  TimeScheme.hpp
src/libtypes/: Array.cpp  CMakeLists.txt  Types.hpp  Vector.cpp
